<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shadow"
        tools:context=".activity.AddProblemeActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shadow"
            android:text="@string/ajouter_un_probleme"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textView"/>

    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/type"
            android:hint="@string/type"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/adresse"
            android:hint="@string/adresse"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.503"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/type"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:inputType="textLongMessage"
            android:ems="10"
            android:id="@+id/description"
            android:hint="@string/description"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.503" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/adresse"/>

    <Button
            android:text="@string/ajouter_probleme"
            android:textColor="@color/white"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/submit" android:layout_marginTop="8dp"
            android:background = "@drawable/round_corners_button_action"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.502"/>

</android.support.constraint.ConstraintLayout>